added password and enabledelete

--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,16 @@
 
 title = SQL Table Editor
 
-DSN = mssql+pymssql://user:password@localhost/wmsfd
-DSN = mssql+pymssql://user:password@localhost/magazie
+DSN = mssql+pymssql://webuser:userweb@localhost/Weintek
+DSN = mssql+pymssql://webuser:userweb@localhost/wmsfd
+DSN = mssql+pymssql://maguser:Alfa.112@localhost/magazie
 DSN = postgresql://ioan:***@localhost/blog
 DSN = postgresql://ioan:***@localhost/nopass
-DSN = mysql+pymysql://root:admin@localhost/database1
+DSN = mysql+pymysql://root:admin@localhost/solarwind01
 DSN = sqlite+pysqlite:///python.db
+
+
+accessprompt = Access Password:
+;accesspassword = 123
+
+;enabledelete = yes
